AR-z-ISTIO-SubsetLevelTrafficSplitting/destination-rule-Server-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-app07
  #namespace: istio-system
spec:
  host: app07.test-ar-istio.svc.cluster.local
  subsets:
  - labels:
      #version: v1
      name: app07
    name: version-v1
  - labels:
      #version: v2
      name: app07
    name: version-v2
